--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
-name: Ruby
+name: Ruby and Pages
 
 on:
   push:
     branches:
       - main
-
   pull_request:
 
 jobs:
@@ -14,6 +13,7 @@ jobs:
     strategy:
       matrix:
         ruby:
+          - '3.1.0'
           - '3.3.4'
 
     steps:
@@ -25,3 +25,33 @@ jobs:
         bundler-cache: true
     - name: Run the default task
       run: bundle exec rake
+
+  docs:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        bundler-cache: true
+    - name: Generate HTML documentation
+      run: bundle exec yard doc --output-dir ./docs
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v2
+      with:
+        path: ./docs
+
+  deploy:
+    needs: docs
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
